@@ -5,3 +5,6 @@ extends =
 
 package-name = ftw.mobile
 
+[versions]
+plone.app.multilingual = 1.2.2
+archetypes.multilingual = 1.1
