@@ -5,6 +5,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
+- Add support for plone.app.multilingual [Kevin Bieri]
+
 - Fix crash when parent is excluded from navigation by also including
   parents when excluded from navigation. [jone]
 
